// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modifyCodeByCommand - decreaseItemIdx 1`] = `
"{
    \\"a\\": {
      \\"b\\": [1, 2, 
        3],
      \\"c\\": true,
    },
    \\"d\\": null,
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 2`] = `
"{
    \\"a\\": {
      \\"b\\": [2, 1, 
        3],
      \\"c\\": true,
    },
    \\"d\\": null,
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 3`] = `
"{
    \\"a\\": {
      \\"b\\": [1, 3, 
        2],
      \\"c\\": true,
    },
    \\"d\\": null,
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 4`] = `
"{
    \\"a\\": {
      \\"b\\": [1, 2, 
        3],
      \\"c\\": true,
    },
    \\"d\\": null,
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 5`] = `
"{
    \\"d\\": null,
    \\"a\\": {
      \\"b\\": [1, 2, 
        3],
      \\"c\\": true,
    },
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 6`] = `
"{
    \\"a\\": {
      \\"b\\": [1, 2, 
        3],
      \\"c\\": true,
    },
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
    \\"d\\": null,
    \\"I\\": \\"example\\",
  }"
`;

exports[`modifyCodeByCommand - decreaseItemIdx 7`] = `
"{
    \\"a\\": {
      \\"b\\": [1, 2, 
        3],
      \\"c\\": true,
    },
    \\"d\\": null,
    \\"I\\": \\"example\\",
    \\"e\\": [{ \\"f\\": 4, \\"g\\": 5 }],
  }"
`;
